--- a/ota_generator/pubspec.yaml
+++ b/ota_generator/pubspec.yaml
@@ -13,8 +13,7 @@ dependencies:
   source_helper: ^1.3.0
   dio: ^4.0.0
   hive: ^2.0.4
-  ota_string:
-    path: ../ota_string/
+  ota_string: any
 
 dev_dependencies:
   build_test: ^2.1.3
