--- a/ota_generator/example/pubspec.yaml
+++ b/ota_generator/example/pubspec.yaml
@@ -1,16 +1,25 @@
 name: example
+description: Just example
+repository: https://github.com/aldychris/ota_string/tree/master/ota_generator/example
+version: 0.0.1
 
 environment:
   sdk: '>=2.12.0-0 <3.0.0'
+  flutter: ">=1.17.0"
 
 dependencies:
+  flutter:
+    sdk: flutter
+
   ota_string: any
   rxdart: ^0.27.2
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   build_runner: any
   lints: ^1.0.1
-  ota_generator: any
+  ota_generator: ^0.0.1
 
 dependency_overrides:
   ota_string:
