--- a/ota_generator/pubspec.yaml
+++ b/ota_generator/pubspec.yaml
@@ -1,7 +1,7 @@
 name: ota_generator
 description: Source code generator to help create multi-language string translation with update over the air without any charges.
+repository: https://github.com/aldychris/ota_string/tree/master/ota_generator
 version: 0.0.1
-publish_to: none
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -13,7 +13,8 @@ dependencies:
   source_helper: ^1.3.0
   dio: ^4.0.0
   hive: ^2.0.4
-  ota_string: any
+  ota_string: ^0.0.1
+  analyzer: ^2.2.0
 
 dev_dependencies:
   build_test: ^2.1.3
