--- a/ota_generator/example/pubspec.yaml
+++ b/ota_generator/example/pubspec.yaml
@@ -11,18 +11,16 @@ dependencies:
   flutter:
     sdk: flutter
 
-  ota_string: any
+  ota_string: ^0.0.1
   rxdart: ^0.27.2
-  hive: ^2.0.4
-  hive_flutter: ^1.1.0
 
 dev_dependencies:
   build_runner: any
   lints: ^1.0.1
   ota_generator: ^0.0.1
 
-dependency_overrides:
-  ota_string:
-    path: ../../ota_string/
-  ota_generator:
-    path: ..
+#dependency_overrides:
+#  ota_string:
+#    path: ../../ota_string/
+#  ota_generator:
+#    path: ..
