--- a/ota_generator/pubspec.yaml
+++ b/ota_generator/pubspec.yaml
@@ -8,7 +8,8 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
-  build: ^2.1.0
+  analyzer: ^2.7.0
+  build: ^2.1.1
   source_gen: ^1.1.1
   source_helper: ^1.3.0
   dio: ^4.0.4
