--- a/ota_generator/example/pubspec.yaml
+++ b/ota_generator/example/pubspec.yaml
@@ -1,7 +1,7 @@
 name: example
 description: Just example
 repository: https://github.com/aldychris/ota_string/tree/master/ota_generator/example
-version: 0.0.2
+version: 0.0.3
 
 environment:
   sdk: '>=2.12.0-0 <3.0.0'
@@ -11,16 +11,16 @@ dependencies:
   flutter:
     sdk: flutter
 
-  ota_string: ^0.0.2
-  rxdart: ^0.27.2
+  ota_string: ^0.0.3
+  rxdart: ^0.27.3
 
 dev_dependencies:
   build_runner: any
   lints: ^1.0.1
-  ota_generator: ^0.0.2
+  ota_generator: ^0.0.3
 
-#dependency_overrides:
-#  ota_string:
-#    path: ../../ota_string/
-#  ota_generator:
-#    path: ..
+dependency_overrides:
+  ota_string:
+    path: ../../ota_string/
+  ota_generator:
+    path: ..
