--- a/ota_generator/pubspec.yaml
+++ b/ota_generator/pubspec.yaml
@@ -1,23 +1,23 @@
 name: ota_generator
 description: Source code generator to help create multi-language string translation with update over the air without any charges.
 repository: https://github.com/aldychris/ota_string/tree/master/ota_generator
-version: 0.0.2
+version: 0.0.3
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
-  analyzer: ^2.7.0
+  analyzer: ">=2.5.0  <3.0.0"
   build: ^2.1.1
-  source_gen: ^1.1.1
+  source_gen: ^1.2.0
   source_helper: ^1.3.0
   dio: ^4.0.4
   hive: ^2.0.4
   ota_string: ^0.0.2
 
 dev_dependencies:
-  build_test: ^2.1.3
-  build_runner: ^2.1.2
+  build_test: ^2.1.4
+  build_runner: ^2.1.5
   lints: ^1.0.1
 
