--- a/ota_generator/example/pubspec.yaml
+++ b/ota_generator/example/pubspec.yaml
@@ -1,24 +1,23 @@
 name: example
 description: Just example
 repository: https://github.com/aldychris/ota_string/tree/master/ota_generator/example
-version: 0.0.3
+version: 0.0.4
 
 environment:
-  sdk: '>=2.12.0-0 <3.0.0'
+  sdk: ">=2.18.2 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  ota_string: ^0.0.3
-  rxdart: ^0.27.3
+  ota_string: ^0.0.4
+  rxdart: 0.27.5
 
 dev_dependencies:
   build_runner: any
   lints: ^1.0.1
-  ota_generator: ^0.0.3
-
+  ota_generator: ^0.0.4
 #dependency_overrides:
 #  ota_string:
 #    path: ../../ota_string/
