--- a/ota_generator/pubspec.yaml
+++ b/ota_generator/pubspec.yaml
@@ -9,14 +9,15 @@ environment:
 
 dependencies:
   analyzer: ">=2.5.0  <8.0.0"
-  build: ^2.3.1
-  source_gen: ^1.2.6
-  source_helper: ^1.3.3
+  build: ^2.1.1
+  source_gen: ^1.2.0
+  source_helper: ^1.3.0
   dio: ^4.0.6
   hive: ^2.2.3
-  ota_string: ^0.0.4
+  ota_string:
+    path: /Users/baraaaljabban/Desktop/ota_string/ota_string/
 
 dev_dependencies:
   build_test: ^2.1.5
-  build_runner: ^2.3.2
+  build_runner: 2.1.7
   lints: ^1.0.1
