--- a/ota_generator/pubspec.yaml
+++ b/ota_generator/pubspec.yaml
@@ -14,7 +14,8 @@ dependencies:
   source_helper: ^1.3.0
   dio: ^4.0.6
   hive: ^2.2.3
-  ota_string: ^0.0.4
+  ota_string:
+    path: ../ota_string
 
 dev_dependencies:
   build_test: ^2.1.5
